--- a/package.json
+++ b/package.json
@@ -8,23 +8,24 @@
     "dev": "ts-node ./api/server.ts",
     "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start",
-    "test": "mocha -r ts-node/register api/**/test.ts"
+    "test": "mocha --exit -r ts-node/register api/**/**.test.ts"
   },
   "author": "Geanny Hernández Rodríguez",
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.19.0",
-    "chai": "^4.2.0",
-    "chai-http": "^4.3.0",
     "express": "^4.16.4",
-    "mocha": "^6.1.4",
     "mongoose": "^5.5.9",
     "nodemon": "^1.19.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/chai-http": "^4.2.0",
     "@types/mocha": "^5.2.6",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^6.1.4",
     "ts-node": "^8.1.0",
     "typescript": "^3.4.5"
   }
